[package]
name = "shadowbreaker"
version = "0.1.0"
authors = ["ChoKyuWon <yyj10137@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
rand = "0.4.0"
base64 = "0.11.0"
num_cpus = "1.7.0"
hex = "0.2.0"
pwhash = "0.3"
rayon = "1.5"